# snowplow-cpp-tracker

./: .clang-format  .gitignore  .travis.yml  01-setup_8md.html  02-initialisation_8md.html  03-adding-data_8md.html  04-tracking-events_8md.html  05-emitters_8md.html  06-client-sessions_8md.html  07-upgrading_8md.html  CHANGELOG  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  README.md  Vagrantfile  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classes.html  classsnowplow_1_1_client_session-members.html  classsnowplow_1_1_client_session.html  classsnowplow_1_1_client_session.js  classsnowplow_1_1_cracked_url-members.html  classsnowplow_1_1_cracked_url.html  classsnowplow_1_1_cracked_url.js  classsnowplow_1_1_emitter-members.html  classsnowplow_1_1_emitter.html  classsnowplow_1_1_emitter.js  classsnowplow_1_1_event-members.html  classsnowplow_1_1_event.html  classsnowplow_1_1_event.js  classsnowplow_1_1_event__inherit__graph.map  classsnowplow_1_1_event__inherit__graph.md5  classsnowplow_1_1_event_payload-members.html  classsnowplow_1_1_event_payload.html  classsnowplow_1_1_event_payload.js  (+417 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  docs.yml  install.yml  release.yml
cmake/: FindLibUUID.cmake  FindUUID.cmake  snowplow-config.cmake.in
docs/: 01-setup.md  02-initialisation.md  03-adding-data.md  04-tracking-events.md  05-emitters.md  06-client-sessions.md  07-upgrading.md  README.md
docs/styles/doxygen-custom/: header.html
examples/: CMakeLists.txt  README.md  conanfile.py  main.cpp
include/snowplow/: CLAUDE.md  client_session.cpp  client_session.hpp  constants.hpp  cracked_url.cpp  cracked_url.hpp  snowplow.cpp  snowplow.hpp  subject.cpp  subject.hpp  tracker.cpp  tracker.hpp  utils.hpp
include/snowplow/configuration/: emitter_configuration.cpp  emitter_configuration.hpp  network_configuration.cpp  network_configuration.hpp  session_configuration.cpp  session_configuration.hpp  tracker_configuration.hpp
include/snowplow/emitter/: emit_status.hpp  emitter.cpp  emitter.hpp  retry_delay.cpp  retry_delay.hpp
include/snowplow/events/: event.cpp  event.hpp  screen_view_event.cpp  screen_view_event.hpp  self_describing_event.cpp  self_describing_event.hpp  structured_event.cpp  structured_event.hpp  timing_event.cpp  timing_event.hpp
include/snowplow/http/: http_client.hpp  http_client_apple.cpp  http_client_apple.hpp  http_client_curl.cpp  http_client_curl.hpp  http_client_windows.cpp  http_client_windows.hpp  http_enums.hpp  http_request_result.cpp  http_request_result.hpp
include/snowplow/payload/: event_payload.cpp  event_payload.hpp  payload.cpp  payload.hpp  self_describing_json.cpp  self_describing_json.hpp
include/snowplow/storage/: event_row.hpp  event_store.hpp  session_store.hpp  sqlite_storage.cpp  sqlite_storage.hpp
performance/: logs.txt  main.cpp  mock_client_session.hpp  mock_emitter.hpp  mute_emitter.hpp  run.cpp  run.hpp  stats.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+50 more)
src/: client_session.cpp  client_session.hpp  constants.hpp  cracked_url.cpp  cracked_url.hpp  emitter.cpp  emitter.hpp  event_row.cpp  event_row.hpp  http_client.cpp  http_client.hpp  http_client_apple.cpp  http_client_apple.hpp  http_client_curl.cpp  http_client_curl.hpp  http_client_test.cpp  http_client_test.hpp  http_client_windows.cpp  http_client_windows.hpp  http_request_result.cpp  http_request_result.hpp  ihttp_client.hpp  payload.cpp  payload.hpp  self_describing_json.cpp  self_describing_json.hpp  snowplow.cpp  snowplow.hpp  storage.cpp  storage.hpp  subject.cpp  subject.hpp  tracker.cpp  tracker.hpp  utils.cpp  utils.hpp  utils_macos.h  utils_macos.mm  utils_macos_interface.h  utils_osx.h  (+2 more)
src/configuration/: emitter_configuration.cpp  emitter_configuration.hpp  network_configuration.cpp  network_configuration.hpp  session_configuration.cpp  tracker_configuration.hpp
src/emitter/: emit_status.hpp  emitter.cpp  emitter.hpp
src/events/: event.cpp  event.hpp  screen_view_event.hpp  self_describing_event.hpp  structured_event.cpp  structured_event.hpp  timing_event.hpp
src/http/: http_client.hpp  http_client_apple.cpp  http_client_apple.hpp  http_client_curl.cpp  http_client_curl.hpp  http_client_windows.hpp  http_enums.hpp  http_request_result.cpp  http_request_result.hpp
src/payload/: event_payload.cpp  payload.cpp  payload.hpp  self_describing_json.hpp
src/storage/: event_row.hpp  session_store.hpp  sqlite_storage.cpp  sqlite_storage.hpp  storage.hpp
src/test/: client_session_test.cpp  cracked_url_test.cpp  emitter_test.cpp  http_client_test.cpp  http_request_result_test.cpp  payload_test.cpp  self_describing_json_test.cpp  storage_test.cpp  subject_test.cpp  tracker_test.cpp  unit.cpp  utils_test.cpp
test/: CLAUDE.md  client_session_test.cpp  cracked_url_test.cpp  emitter_test.cpp  http_client_test.cpp  http_request_result_test.cpp  main.cpp  payload_test.cpp  self_describing_json_test.cpp  snowplow_test.cpp  storage_test.cpp  subject_test.cpp  test_http_client.hpp  tracker_test.cpp  unit.cpp  utils_test.cpp
test/configuration/: emitter_configuration_test.cpp  network_configuration_test.cpp
test/emitter/: emitter_test.cpp  retry_delay_test.cpp
test/http/: http_client_test.cpp  http_request_result_test.cpp  test_http_client.cpp  test_http_client.hpp
test/install/: CMakeLists.txt  conanfile.py  main.cpp
test/integration/: iglu.json  integration_test.cpp  micro.conf  micro.cpp  micro.hpp
test/payload/: event_payload_test.cpp  payload_test.cpp  self_describing_json_test.cpp
test/storage/: sqlite_storage_test.cpp
vagrant/: up.guidance
(+8 files in other folders)
